<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt1">Button1</string>
    <string name="bt2">Button2</string>
    <string name="both">Both</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
</resources>
